--- a/templates/prediction.html
+++ b/templates/prediction.html
@@ -15,18 +15,13 @@
         <div class="span4">
 
 <h1>Thank you! Below you can find the prediction result.</h1>
-<ul class="list-group">
-     <li class="list-group-item">Sepal Length: {{ session['SepalLengthCm'] }}</li>
-     <li class="list-group-item">Sepal Width: {{ session['SepalWidthCm'] }}</li>
-     <li class="list-group-item">Petal Length: {{ session['PetalLengthCm'] }}</li>
-     <li class="list-group-item">Petal Width: {{ session['PetalWidthCm'] }}</li>
-</ul>
 <br>
 <br>
 <br>
 <br>
-<h2>Prediction Result: <span style="color:green;">{{ results }}</span></h2>
-
+<br>
+<br>
+<h2>PM10 Prediction Result for {{ session['PredictionCity'] }} on {{ session['PredictionDate'] }} : <br> <span style="color:green;">{{ results }}</span></h2>
 </div>
 <div class="span4"></div>
  
